[tool.poetry]
name = "act_tesser"
version = "1.0.0"
description = ""
authors = ["TurtleEgg <jake-take@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
yes = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
